WIP: Trying to fix button states on mobile

--- a/components/common/rich-text-input/rich-text-editor.css
+++ b/components/common/rich-text-input/rich-text-editor.css
@@ -33,8 +33,7 @@
   fill: #171738ff
 }
 
-.rich-text-menu .is-active svg,
-.rich-text-menu svg:hover {
-  font-weight: bold;
+.rich-text-menu button.is-active svg,
+.rich-text-menu button:hover svg {
   fill: #06c;
 }
